fix: use correct OpenRouter model ID (openai/gpt-oss-120b)

--- a/web-client/index.html
+++ b/web-client/index.html
@@ -19,7 +19,7 @@
           <label for="model-select">Model:</label>
           <select id="model-select">
             <option value="openai">OpenAI (gpt-5-nano)</option>
-            <option value="openrouter">OpenRouter (deepinfra/fp4)</option>
+            <option value="openrouter">OpenRouter (gpt-oss-120b)</option>
           </select>
         </div>
       </header>
@@ -80,6 +80,6 @@
         openrouterApiKey: "{{OPENROUTER_API_KEY}}",
       };
     </script>
-    <script src="js/app.js?v=15"></script>
+    <script src="js/app.js?v=16"></script>
   </body>
 </html>
