--- a/web-client/index.html
+++ b/web-client/index.html
@@ -66,7 +66,7 @@
       <footer>
         <p>
           Powered by ChatRPG MCP Server •
-          <a href="https://github.com/Mnehmos/ChatRPG" target="_blank"
+          <a href="https://github.com/Mnehmos/mnehmos.chatrpg.game" target="_blank"
             >GitHub</a
           >
         </p>
